Bug 1695171 - Fix overlap of hamburger menu when the window is shrunk r=Gijs,desktop-theme-reviewers,dao
Reduced the width of the url nav bar when the window is shrunk to make space for the hamburger menu in proton.

Differential Revision: https://phabricator.services.mozilla.com/D108463

UltraBlame original commit: 2a9f1e4dd615793ed548b335b3be4df6fcbc7c66

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -6343,6 +6343,109 @@ width
 :
 calc
 (
+216px
++
+24px
++
+2
+*
+var
+(
+-
+-
+toolbarbutton
+-
+inner
+-
+padding
+)
+)
+;
+}
+#
+nav
+-
+bar
+[
+downloadsbuttonshown
+]
+#
+urlbar
+-
+container
+{
+min
+-
+width
+:
+216px
+;
+}
+#
+identity
+-
+icon
+-
+box
+{
+max
+-
+width
+:
+70px
+;
+}
+#
+urlbar
+-
+zoom
+-
+button
+{
+display
+:
+none
+;
+}
+}
+supports
+not
+-
+moz
+-
+bool
+-
+pref
+(
+"
+browser
+.
+proton
+.
+enabled
+"
+)
+{
+media
+(
+max
+-
+width
+:
+550px
+)
+{
+#
+urlbar
+-
+container
+{
+min
+-
+width
+:
+calc
+(
 225px
 +
 24px
@@ -6381,33 +6484,19 @@ width
 225px
 ;
 }
-#
-identity
--
-icon
--
-box
-{
-max
--
-width
-:
-70px
-;
-}
-#
-urlbar
--
-zoom
--
-button
-{
-display
-:
-none
-;
 }
 }
+/
+*
+*
+*
+END
+!
+proton
+*
+*
+*
+/
 /
 *
 Flexible
